feat: criando migration e seed

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "mysql" :"server=127.0.0.1;port=3306;user=root;password=quero123;database=minimal_api"
+  }
 }
