feat: regras para autorização

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "mysql" :"server=127.0.0.1;port=3306;user=root;password=quero123;database=minimal_api"
+  },
+  "Jwt": {
+    "Key": "minimal-api-alunos-vamos-lá-2025"
   }
 }
